@@ -23,6 +23,7 @@
 	- use -fPIC -DPIC on all platforms, not just mandatory (#112713).
 	- popt: pad to display length, not strlen, for i18n popt args (#106240).
 	- python: include Python.h before glibc features.h.
+	- python: return [], not None, accessing header tags (#112794).
 
 4.2 -> 4.2.1:
 	- fix: nested %if handling, optind initialization posix vs. glibc.
